--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -1,6 +1,19 @@
 name: Build & Publish
 
-on: [repository_dispatch]
+on:
+  workflow_dispatch:
+    inputs:
+      target_red:
+        description: "The target branch to run workflow for."
+        default: "master"
+        required: false
+      tag:
+        description: "The target pmmp tag to build an image for."
+        required: true
+      pull:
+        description: "Should we pull existing images before the build to speed up the build?"
+        default: "true"
+        required: false
 
 jobs:
   build:
@@ -11,13 +24,13 @@ jobs:
     if: github.event.action == 'build-publish'
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
       with:
         # allow targeting a build against any branch
-        ref: ${{ github.event.client_payload.target_ref }}
+        ref: ${{ github.event.inputs.target_ref }}
     - uses: ./.github/actions/build-publish
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tag: ${{ github.event.client_payload.tag }}
-        pull: ${{ github.event.client_payload.pull }}
+        tag: ${{ github.event.inputs.tag }}
+        pull: ${{ github.event.inputs.pull }}
