--- a/phpstan/Dockerfile
+++ b/phpstan/Dockerfile
@@ -3,9 +3,9 @@ ARG TAG
 FROM ${IMAGE:-paroxity/pmmp}:${TAG}
 
 USER root
-RUN curl -L https://getcomposer.org/installer | php
+RUN wget -qO - https://getcomposer.org/installer | php
 RUN mv composer.phar /usr/bin/composer
-RUN curl -L https://github.com/phpstan/phpstan/releases/download/1.2.0/phpstan.phar -o /usr/bin/phpstan
+RUN wget -qO /usr/bin/phpstan https://github.com/phpstan/phpstan/releases/download/1.2.0/phpstan.phar
 RUN chmod o+x /usr/bin/phpstan
 ADD analyze.php /usr/bin/analyze
 RUN chmod 755 /usr/bin/analyze
@@ -16,7 +16,7 @@ RUN chown 1000:1000 /pocketmine/phpstan.neon /pocketmine/pocketmine.phpstan.neon
 
 # install custom rules
 RUN mkdir -p /pocketmine/phpstan/rules
-RUN curl -L https://raw.githubusercontent.com/pmmp/PocketMine-MP/4014f9a4f2426b358288ce96386b8d73db760512/tests/phpstan/rules/DisallowEnumComparisonRule.php -o /pocketmine/phpstan/rules/DisallowEnumComparisonRule.php
+RUN wget -qO /pocketmine/phpstan/rules/DisallowEnumComparisonRule.php https://raw.githubusercontent.com/pmmp/PocketMine-MP/4014f9a4f2426b358288ce96386b8d73db760512/tests/phpstan/rules/DisallowEnumComparisonRule.php
 ADD config/pm4-enum.phpstan.neon /pocketmine/phpstan/rules/pm4-enums.phpstan.neon
 RUN chown 1000:1000 \
 	/pocketmine/phpstan/rules/DisallowEnumComparisonRule.php \
