--- a/pmmp/Dockerfile
+++ b/pmmp/Dockerfile
@@ -19,7 +19,7 @@ RUN mv composer.phar /usr/bin/composer
 RUN composer install --classmap-authoritative --no-dev --prefer-source
 # 3.0.0 $(test -d resources || echo -n src/pocketmine/)resources/vanilla/.minify_json.php
 # 4.0.0 vendor/pocketmine/bedrock-data/.minify_json.php
-RUN php vendor/pocketmine/bedrock-data/.minify_json.php
+RUN php $(test -d resources || echo -n src/pocketmine/)resources/vanilla/.minify_json.php
 
 RUN composer make-server
 # Just to make sure DevTools didn't false-positive-exit
