update phpstan default rules

--- a/phpstan/config/pm4-enum.phpstan.neon
+++ b/phpstan/config/pm4-enum.phpstan.neon
@@ -1,2 +1,3 @@
 rules:
     - /pocketmine/phpstan/rules/DisallowEnumComparisonRule.php
+    - /pocketmine/phpstan/rules/UnsafeForeachArrayOfStringRule.php
