--- a/phpstan/phpstan.neon
+++ b/phpstan/phpstan.neon
@@ -5,6 +5,6 @@ parameters:
 	level: 5
 	paths:
 		- /source/src
+	# don't analyze files in /deps, but still include it.
 	scanDirectories:
-		- /source/src
 		- /deps
