--- a/.github/actions/build-publish/action.yml
+++ b/.github/actions/build-publish/action.yml
@@ -15,7 +15,7 @@ inputs:
     required: false
   pull:
     description: "Should we pull existing images before the build to speed up the build?"
-    default: "true"
+    default: "false"
     required: false
 runs:
   using: "docker"
