--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -12,7 +12,7 @@ on:
         required: false
       pull:
         description: "Should we pull existing images before the build to speed up the build?"
-        default: "true"
+        default: "false"
         required: false
 
 jobs:
